v1.7 - 
* database upgrade: HSP will upgrade automatically, but to be safe you should backup your database before upgrading!
* new strategies: SpawnLastLocation and SpawnLocalPlayerSpawn
* new modes: ModeRememberSpawn and ModeRememberLocation

v1.6.2 - 
* Ticket #118: error when using spawnWorldRandom strategy
* cleaned up some spurious warning messages related to some missing default config settings
* added "core.bedHomeOverwritesDefault" flag for determining how bed home vs default home (/sethome) interact (default = true)

v1.6.1 - Jul 8, 2012
* made strategies no longer case-sensitive in the configuration
* added "nearestHomeOrSpawn" strategy
* added some extra warnings to hopefully detect configuration issues and reduce the number of support tickets
* added Portuguese translation (locale pt) - thanks @Traki08!
* updated German translation (locale de) - thanks @Jobsti2!
* new event "onNamedSpawnCommand" for controlling named spawn behavior
* new strategies "modeNoWater" and "modeYBounds" for controlling safe spawn and random spawn behavior
* improvements to safe teleport to reduce occurance of non-safe teleports, especially noticeable with random strategies
* added "dynmap.layer.homes.include-bed-home" and "include-named-homes" options (default home is always included)
* implemented player name best matching for several commands (/hlo, /homeo, /hi, /sho). /dho (delete) still requires exact match as a safety measure.

v1.6 - Jun 30, 2012
* added /permcheck command (alias /pc) for checking permissions
* added plugin metrics (from LWC author Hidendra, website http://mcstats.org). Edit "plugins/PluginMetrics/config.yml" and set "opt-out: true" if you wish to opt out of all mcstats reporting.