@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Sat Jul 14 08:46:04 PDT 2012
-build.number=611
+#Sat Jul 14 14:34:29 PDT 2012
+build.number=612
