@@ -2,6 +2,8 @@ v1.7 -
 * database upgrade: HSP will upgrade automatically, but to be safe you should backup your database before upgrading!
 * new strategies: SpawnLastLocation and SpawnLocalPlayerSpawn
 * new modes: ModeRememberSpawn and ModeRememberLocation
+* new WorldGuard mode: modeInRegion
+* See http://dev.bukkit.org/server-mods/homespawnplus/pages/examples/example07/ for example of new modes in action
 
 v1.6.2 - 
 * Ticket #118: error when using spawnWorldRandom strategy
